# SafeTensorManager

./: README.md  adapter.py  gpu_utils.py  main.py  memory_manager.py  model_handler.py  pasted_text_1725808472100.txt  pyproject.toml  requirements.txt
static/: styles.css
templates/: index.html
